--- a/src/site/notes/xhs/圣彼得堡｜48 Стульев｜爵士乐吧.md
+++ b/src/site/notes/xhs/圣彼得堡｜48 Стульев｜爵士乐吧.md
@@ -2,36 +2,36 @@
 {"dg-publish":true,"permalink":"/xhs/圣彼得堡｜48 Стульев｜爵士乐吧/","tags":["rednote","圣彼得堡"],"created":"2025-03-17T22:38:50.215+08:00","updated":"2025-03-18T23:10:08.912+08:00"}
 ---
 
-![[Attachment 1139.jpeg\|Attachment 1139.jpeg]]
+![Attachment 1139.jpeg](/img/user/xhs/Attachment%201139.jpeg)
 p1 调酒师调酒，吧台这边没有演出，但还是能听到爵士乐
 
-![[Attachment 1140.jpeg\|Attachment 1140.jpeg]]
+![Attachment 1140.jpeg](/img/user/xhs/Attachment%201140.jpeg)
 p2 上至下：
 Phoenix 橘子味，酸酸的，闻起来就是橘皮的清香，我喜欢！！
 Palette 闻着就很甜，喝着也是w很好喝不过对我来说甜了点
 
-![[Attachment 1141.jpeg\|Attachment 1141.jpeg]]
+![Attachment 1141.jpeg](/img/user/xhs/Attachment%201141.jpeg)
 p3 Palette的调色盘很可爱所以单独拍一张
 
-![[Attachment 1142.jpeg\|Attachment 1142.jpeg]]
+![Attachment 1142.jpeg](/img/user/xhs/Attachment%201142.jpeg)
 p4 餐前面包之后才知道是要收费的，很大份（390）
 
-![[Attachment 1143.jpeg\|Attachment 1143.jpeg]]
+![Attachment 1143.jpeg](/img/user/xhs/Attachment%201143.jpeg)
 p5 Карпаччо из оленя by[@有没有快充](https://www.xiaohongshu.com/user/profile/5b09ff7ee8ac2b57cc9168a6?xsec_token=YBL1djw99qSDL5an5wdbqv9MXvIR2sGpmb-xqlCQgfJQM=&xsec_source=app_share&xhsshare=CopyLink&appuid=5bb07135cd338f00012c0631&apptime=1742309403&share_id=61d1839fc0a743788b1e3c94ccd9bca7)，第一次吃鹿肉，挺好吃诶
 
-![[Attachment 1144.jpeg\|Attachment 1144.jpeg]]
+![Attachment 1144.jpeg](/img/user/xhs/Attachment%201144.jpeg)
 p6 Черноморский рапан с суфле 蘑菇非常好吃，中间应该是奶酪，吃到后面有点腻，但蘑菇好好吃哦还是很喜欢
 
-![[Attachment 1145.jpeg\|Attachment 1145.jpeg]]
+![Attachment 1145.jpeg](/img/user/xhs/Attachment%201145.jpeg)
 p7 Равиоли с морским гребешкон 三个小混沌&扇贝，扇贝好好吃！小混沌也是！上面是奶油下面是奶酪…所以，明知道两个奶酪会腻还是点了的我.jpg
 
-![[Attachment 1146.jpeg\|Attachment 1146.jpeg]]
+![Attachment 1146.jpeg](/img/user/xhs/Attachment%201146.jpeg)
 <center>存衣号码牌</center>
 
-![[Attachment 1147.jpeg\|Attachment 1147.jpeg]]
+![Attachment 1147.jpeg](/img/user/xhs/Attachment%201147.jpeg)
 <center>去的时候吧台还没有人</center>
 
-![[Attachment 1148.jpeg\|Attachment 1148.jpeg]]
+![Attachment 1148.jpeg](/img/user/xhs/Attachment%201148.jpeg)
 <center>放小票的🎩，可爱</center>
 
 *会收10%可能是爵士乐演出的费用，‘услуга по организации досуга’，顺便一提小姐姐唱得很好，8点多去的，差不多10点演出结束（大概2h？）*
