Published multiple files

--- a/src/site/notes/xhs/Вилла Гранде｜瓦西里岛24-25线.md
+++ b/src/site/notes/xhs/Вилла Гранде｜瓦西里岛24-25线.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/xhs/Вилла Гранде｜瓦西里岛24-25线/"}
+{"dg-publish":true,"permalink":"/xhs/villa-grande-24-25/"}
 ---
 
 作者：kumori
