--- a/src/site/notes/xhs/Вилладжио｜瓦西里岛｜意.md
+++ b/src/site/notes/xhs/Вилладжио｜瓦西里岛｜意.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/xhs/Вилладжио｜瓦西里岛｜意/","tags":["rednote"]}
+{"dg-publish":true,"permalink":"/xhs/villadzhio/","tags":["rednote"]}
 ---
 
 ￼
