--- a/src/site/notes/xhs/Гоголь｜俄餐.md
+++ b/src/site/notes/xhs/Гоголь｜俄餐.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/xhs/Гоголь｜俄餐/","tags":["rednote"]}
+{"dg-publish":true,"permalink":"/xhs/gogol/","tags":["rednote"]}
 ---
 
 作者：kumori
