--- a/src/site/notes/xhs/Каспийка｜喀山｜下卡班湖.md
+++ b/src/site/notes/xhs/Каспийка｜喀山｜下卡班湖.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/xhs/Каспийка｜喀山｜下卡班湖/","tags":["rednote"]}
+{"dg-publish":true,"permalink":"/xhs/kaspijka/","tags":["rednote"]}
 ---
 
 作者：kumori
