--- a/src/site/notes/xhs/Перемена｜Галерея附近.md
+++ b/src/site/notes/xhs/Перемена｜Галерея附近.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/xhs/Перемена｜Галерея附近/"}
+{"dg-publish":true,"permalink":"/xhs/peremena-galereya/"}
 ---
 
 作者：kumori
