--- a/src/site/notes/xhs/Перемена｜咖喱咧附近.md
+++ b/src/site/notes/xhs/Перемена｜咖喱咧附近.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/xhs/Перемена｜咖喱咧附近/","tags":["rednote"]}
+{"dg-publish":true,"permalink":"/xhs/peremena/","tags":["rednote"]}
 ---
 
 ￼
