--- a/src/site/notes/xhs/Пышечная купца Маркелова｜维堡.md
+++ b/src/site/notes/xhs/Пышечная купца Маркелова｜维堡.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/xhs/Пышечная купца Маркелова｜维堡/","tags":["rednote","维堡"]}
+{"dg-publish":true,"permalink":"/xhs/pyshechnaya-kupcza-markelova/","tags":["rednote","维堡"]}
 ---
 
 作者：kumori
