--- a/src/site/notes/xhs/Римски｜瓦西里岛.md
+++ b/src/site/notes/xhs/Римски｜瓦西里岛.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/xhs/Римски｜瓦西里岛/","tags":["rednote"]}
+{"dg-publish":true,"permalink":"/xhs/rimski/","tags":["rednote"]}
 ---
 
 作者：kumori
