--- a/src/site/notes/xhs/Русская рыбалка｜叶拉金岛.md
+++ b/src/site/notes/xhs/Русская рыбалка｜叶拉金岛.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/xhs/Русская рыбалка｜叶拉金岛/","tags":["rednote"]}
+{"dg-publish":true,"permalink":"/xhs/russkaya-rybalka/","tags":["rednote"]}
 ---
 
 作者：kumori
