--- a/src/site/notes/xhs/Своя комната｜新荷兰岛附近.md
+++ b/src/site/notes/xhs/Своя комната｜新荷兰岛附近.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/xhs/Своя комната｜新荷兰岛附近/"}
+{"dg-publish":true,"permalink":"/xhs/svoya-komnata/"}
 ---
 
 作者：kumori
