--- a/src/site/notes/xhs/Сушипокебоул｜日料｜瓦西里岛.md
+++ b/src/site/notes/xhs/Сушипокебоул｜日料｜瓦西里岛.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/xhs/Сушипокебоул｜日料｜瓦西里岛/"}
+{"dg-publish":true,"permalink":"/xhs/sushipokeboul/"}
 ---
 
 作者：kumori
