--- a/src/site/notes/xhs/Такояки｜Гостиный двор附近.md
+++ b/src/site/notes/xhs/Такояки｜Гостиный двор附近.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/xhs/Такояки｜Гостиный двор附近/"}
+{"dg-publish":true,"permalink":"/xhs/takoyaki-gostinyj-dvor/"}
 ---
 
 作者：kumori
