--- a/src/site/notes/xhs/Территория кофе｜彼得格勒.md
+++ b/src/site/notes/xhs/Территория кофе｜彼得格勒.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/xhs/Территория кофе｜彼得格勒/"}
+{"dg-publish":true,"permalink":"/xhs/territoriya-kofe/"}
 ---
 
 作者：kumori
