--- a/src/site/notes/xhs/Усадьба Бюргера｜维堡.md
+++ b/src/site/notes/xhs/Усадьба Бюргера｜维堡.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/xhs/Усадьба Бюргера｜维堡/","tags":["rednote","维堡"]}
+{"dg-publish":true,"permalink":"/xhs/usadba-byurgera/","tags":["rednote","维堡"]}
 ---
 
 作者：kumori
