--- a/src/site/notes/xhs/Фуку Рамен｜日料｜下诺夫哥罗德.md
+++ b/src/site/notes/xhs/Фуку Рамен｜日料｜下诺夫哥罗德.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/xhs/Фуку Рамен｜日料｜下诺夫哥罗德/","tags":["rednote"]}
+{"dg-publish":true,"permalink":"/xhs/fuku-ramen/","tags":["rednote"]}
 ---
 
 作者：kumori
