--- a/src/site/notes/xhs/Чайхана Инжир｜莫斯科.md
+++ b/src/site/notes/xhs/Чайхана Инжир｜莫斯科.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/xhs/Чайхана Инжир｜莫斯科/"}
+{"dg-publish":true,"permalink":"/xhs/chajhana-inzhir/"}
 ---
 
 作者：kumori
