--- a/src/site/notes/xhs/Чичи-Бичи｜格鲁吉亚+法餐.md
+++ b/src/site/notes/xhs/Чичи-Бичи｜格鲁吉亚+法餐.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/xhs/Чичи-Бичи｜格鲁吉亚+法餐/"}
+{"dg-publish":true,"permalink":"/xhs/chichi-bichi/"}
 ---
 
 作者：kumori
