--- a/src/site/notes/xhs/Шоколадница｜Галерея 2楼.md
+++ b/src/site/notes/xhs/Шоколадница｜Галерея 2楼.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/xhs/Шоколадница｜Галерея 2楼/","tags":["rednote"]}
+{"dg-publish":true,"permalink":"/xhs/shokoladnicza-galereya-2/","tags":["rednote"]}
 ---
 
 ￼
