--- a/src/site/notes/xhs/Юнга｜海鲜.md
+++ b/src/site/notes/xhs/Юнга｜海鲜.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/xhs/Юнга｜海鲜/","tags":["rednote"]}
+{"dg-publish":true,"permalink":"/xhs/yunga/","tags":["rednote"]}
 ---
 
 ￼
