--- a/src/site/notes/xhs/Ярумэн｜日料｜Маяковская地铁站附近.md
+++ b/src/site/notes/xhs/Ярумэн｜日料｜Маяковская地铁站附近.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/xhs/Ярумэн｜日料｜Маяковская地铁站附近/"}
+{"dg-publish":true,"permalink":"/xhs/yarumen-mayakovskaya/"}
 ---
 
 作者：kumori
