--- a/src/site/notes/xhs/Где мое саке?｜维堡.md
+++ b/src/site/notes/xhs/Где мое саке?｜维堡.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/xhs/Где мое саке?｜维堡/","tags":["rednote","维堡"]}
+{"dg-publish":true,"permalink":"/xhs/gde-moe-sake/","tags":["rednote","维堡"]}
 ---
 
 作者：kumori
