--- a/src/site/notes/xhs/Кофе и вафли｜瓦西里岛.md
+++ b/src/site/notes/xhs/Кофе и вафли｜瓦西里岛.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/xhs/Кофе и вафли｜瓦西里岛/","tags":["rednote","圣彼得堡"]}
+{"dg-publish":true,"permalink":"/xhs/kofe-i-vafli/","tags":["rednote","圣彼得堡"]}
 ---
 
 作者：kumori
