--- a/src/site/notes/xhs/Стейк-Хаус Км｜下诺夫哥罗德.md
+++ b/src/site/notes/xhs/Стейк-Хаус Км｜下诺夫哥罗德.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/xhs/Стейк-Хаус Км｜下诺夫哥罗德/","tags":["rednote"]}
+{"dg-publish":true,"permalink":"/xhs/stejk-haus-km/","tags":["rednote"]}
 ---
 
 作者：kumori
