--- a/src/site/notes/xhs/Тюбетей｜喀山.md
+++ b/src/site/notes/xhs/Тюбетей｜喀山.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/xhs/Тюбетей｜喀山/","tags":["rednote"]}
+{"dg-publish":true,"permalink":"/xhs/tyubetej/","tags":["rednote"]}
 ---
 
 作者：kumori
