--- a/src/site/notes/xhs/Френдс｜彼得格勒岛.md
+++ b/src/site/notes/xhs/Френдс｜彼得格勒岛.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/xhs/Френдс｜彼得格勒岛/","tags":["rednote"]}
+{"dg-publish":true,"permalink":"/xhs/frends/","tags":["rednote"]}
 ---
 
 
