--- a/src/site/notes/xhs/Хлеб Сыр Вино 1&2.md
+++ b/src/site/notes/xhs/Хлеб Сыр Вино 1&2.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/xhs/Хлеб Сыр Вино 1&2/"}
+{"dg-publish":true,"permalink":"/xhs/hleb-syr-vino-1-and-2/"}
 ---
 
 作者：kumori
