Published multiple files

--- a/src/site/notes/xhs/Дальгона_下诺夫哥罗德.md
+++ b/src/site/notes/xhs/Дальгона_下诺夫哥罗德.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/xhs/dalgona/","tags":["rednote","下诺夫哥罗德"]}
+{"dg-publish":true,"dg-permalink":"\"Дальгона\"","permalink":"/\"Дальгона\"/","tags":["rednote","下诺夫哥罗德"]}
 ---
 
 作者：kumori
