Published multiple files

--- a/src/site/notes/xhs/韩国/首尔/弘大 251109.md
+++ b/src/site/notes/xhs/韩国/首尔/弘大 251109.md
@@ -6,30 +6,30 @@
 总体很充实的一天be like：
 > 紫菜包饭-弘大-遇到周末市集-路演-咒快闪-草莓牛奶-akplaza-cu买专拆专-黄油-明洞溜达-去了一家有特点的专辑店但没买-小浣熊拉面买买-wiggle小熊店里拍拍-参鸡汤-line-权顺荣小8等广告-lotte游行
 
-![IMG_9905.HEIC.jpeg](/img/user/xhs/%E9%9F%A9%E5%9B%BD/%E9%A6%96%E5%B0%94/attachments/IMG_9905.HEIC.jpeg)
+![IMG_9905.HEIC.jpeg](/img/user/xhs/%E9%9F%A9%E5%9B%BD/%E9%A6%96%E5%B0%94/photo-%E9%A6%96%E5%B0%94/IMG_9905.HEIC.jpeg)
 弘大地图-red road
 
-![IMG_9917.HEIC.jpeg](/img/user/xhs/%E9%9F%A9%E5%9B%BD/%E9%A6%96%E5%B0%94/attachments/IMG_9917.HEIC.jpeg)
+![IMG_9917.HEIC.jpeg](/img/user/xhs/%E9%9F%A9%E5%9B%BD/%E9%A6%96%E5%B0%94/photo-%E9%A6%96%E5%B0%94/IMG_9917.HEIC.jpeg)
 super coffee 슈퍼커피 홍대입구점 草莓牛奶
 其实就是牛奶加一堆草莓ww酸酸的，不如便利店的，不过好处是有草莓而且有很多
 在二楼，门外有标识，不是很好找，一开始走错了
 *地址：*
 [서울 마포구 홍익로 10 서교푸르지오](https://pcmap.place.naver.com/restaurant/37537609/home?entry=bmp&from=map&fromPanelNum=2&timestamp=202504122253&locale=ko&svcName=map_pcv5&searchText=super%20coffee#)
 
-![IMG_9938.HEIC.jpeg](/img/user/xhs/%E9%9F%A9%E5%9B%BD/%E9%A6%96%E5%B0%94/attachments/IMG_9938.HEIC.jpeg)
+![IMG_9938.HEIC.jpeg](/img/user/xhs/%E9%9F%A9%E5%9B%BD/%E9%A6%96%E5%B0%94/photo-%E9%A6%96%E5%B0%94/IMG_9938.HEIC.jpeg)
 小浣熊-ksw！（不是
 
-![IMG_9985.HEIC.jpeg](/img/user/xhs/%E9%9F%A9%E5%9B%BD/%E9%A6%96%E5%B0%94/attachments/IMG_9985.HEIC.jpeg)
+![IMG_9985.HEIC.jpeg](/img/user/xhs/%E9%9F%A9%E5%9B%BD/%E9%A6%96%E5%B0%94/photo-%E9%A6%96%E5%B0%94/IMG_9985.HEIC.jpeg)
 明洞参鸡汤，忘了是哪家，路过去的
 
-![IMG_9921.HEIC.jpeg](/img/user/xhs/%E9%9F%A9%E5%9B%BD/%E9%A6%96%E5%B0%94/attachments/IMG_9921.HEIC.jpeg)
+![IMG_9921.HEIC.jpeg](/img/user/xhs/%E9%9F%A9%E5%9B%BD/%E9%A6%96%E5%B0%94/photo-%E9%A6%96%E5%B0%94/IMG_9921.HEIC.jpeg)
 Cu 不过不得不说换的好快啊，10多天一换的感觉？
 
-![IMG_0010.HEIC.jpeg](/img/user/xhs/%E9%9F%A9%E5%9B%BD/%E9%A6%96%E5%B0%94/attachments/IMG_0010.HEIC.jpeg)
+![IMG_0010.HEIC.jpeg](/img/user/xhs/%E9%9F%A9%E5%9B%BD/%E9%A6%96%E5%B0%94/photo-%E9%A6%96%E5%B0%94/IMG_0010.HEIC.jpeg)
 Cu拆卡收获 能出crj就是胜利
 便利店很成功了呼呼呼-单封的话一个5一个2好像
 
-![IMG_0002.HEIC.jpeg](/img/user/xhs/%E9%9F%A9%E5%9B%BD/%E9%A6%96%E5%B0%94/attachments/IMG_0002.HEIC.jpeg)
+![IMG_0002.HEIC.jpeg](/img/user/xhs/%E9%9F%A9%E5%9B%BD/%E9%A6%96%E5%B0%94/photo-%E9%A6%96%E5%B0%94/IMG_0002.HEIC.jpeg)
 
-![IMG_0003.HEIC.jpeg](/img/user/xhs/%E9%9F%A9%E5%9B%BD/%E9%A6%96%E5%B0%94/attachments/IMG_0003.HEIC.jpeg)
+![IMG_0003.HEIC.jpeg](/img/user/xhs/%E9%9F%A9%E5%9B%BD/%E9%A6%96%E5%B0%94/photo-%E9%A6%96%E5%B0%94/IMG_0003.HEIC.jpeg)
 乐天百货圣诞装饰+偶遇大游行
