--- a/src/site/notes/xhs/韩国/首尔/昌德宫 일월카츠 안국점 炸猪排.md
+++ b/src/site/notes/xhs/韩国/首尔/昌德宫 일월카츠 안국점 炸猪排.md
@@ -18,13 +18,13 @@
 这家的好吃是还会再去的程度！
 
 
-![IMG_0064.HEIC.jpeg](/img/user/xhs/%E9%9F%A9%E5%9B%BD/%E9%A6%96%E5%B0%94/attachments/IMG_0064.HEIC.jpeg)
+![IMG_0064.HEIC.jpeg](/img/user/xhs/%E9%9F%A9%E5%9B%BD/%E9%A6%96%E5%B0%94/photo-%E9%A6%96%E5%B0%94/IMG_0064.HEIC.jpeg)
 这天还吃了br，像皮卡丘那个味道有点酸，忘了是啥，另一个貌似有点腻
 
 地址：
 [서울 종로구 북촌로1길 11 1층](https://pcmap.place.naver.com/restaurant/1248014794/home?from=map&fromPanelNum=1&additionalHeight=76&timestamp=202504131614&locale=ko&svcName=map_pcv5&searchText=%EC%9D%BC%EC%9B%94%EC%B9%B4%EC%B8%A0%20%EC%95%88%EA%B5%AD%EC%A0%90%20#)
 
-![Pasted image 20250413161418.png](/img/user/xhs/%E9%9F%A9%E5%9B%BD/%E9%A6%96%E5%B0%94/attachments/Pasted%20image%2020250413161418.png)
+![Pasted image 20250413161418.png](/img/user/xhs/%E9%9F%A9%E5%9B%BD/%E9%A6%96%E5%B0%94/photo-%E9%A6%96%E5%B0%94/Pasted%20image%2020250413161418.png)
 
 
 [xhs](https://www.xiaohongshu.com/explore/673b897b000000000202b226?xsec_token=ABedlK0mJpHKXVhHhsR_CTJm-m5W6rpJCt-C84XnsjMoI=&xsec_source=pc_user)
