--- a/src/site/notes/xhs/韩国/首尔/弘大 참바른 김밥_紫菜包饭.md
+++ b/src/site/notes/xhs/韩国/首尔/弘大 참바른 김밥_紫菜包饭.md
@@ -22,6 +22,6 @@
 地址：
 [서울 마포구 독막로 43-1 101호](https://pcmap.place.naver.com/restaurant/1027321167/home?entry=bmp&from=map&fromPanelNum=2&timestamp=202504121555&locale=ko&svcName=map_pcv5&searchText=%20%EC%B0%B8%EB%B0%94%EB%A5%B8%20%EA%B9%80%EB%B0%A5#)
 
-![Pasted image 20250412155637.png](/img/user/xhs/%E9%9F%A9%E5%9B%BD/%E9%A6%96%E5%B0%94/attachments/Pasted%20image%2020250412155637.png)
+![Pasted image 20250412155637.png](/img/user/xhs/%E9%9F%A9%E5%9B%BD/%E9%A6%96%E5%B0%94/photo-%E9%A6%96%E5%B0%94/Pasted%20image%2020250412155637.png)
 
 [^1]: 第二次去：[[xhs/韩国/首尔/弘大 참바른 김밥_紫菜包饭2\|弘大 참바른 김밥_紫菜包饭2]]
