--- a/src/site/notes/xhs/韩国/首尔/梨大 꾸아 이대점_越南粉.md
+++ b/src/site/notes/xhs/韩国/首尔/梨大 꾸아 이대점_越南粉.md
@@ -10,6 +10,6 @@
 
 
 地址：
-![Pasted image 20250412160905.png](/img/user/xhs/%E9%9F%A9%E5%9B%BD/%E9%A6%96%E5%B0%94/attachments/Pasted%20image%2020250412160905.png)
+![Pasted image 20250412160905.png](/img/user/xhs/%E9%9F%A9%E5%9B%BD/%E9%A6%96%E5%B0%94/photo-%E9%A6%96%E5%B0%94/Pasted%20image%2020250412160905.png)
 
 [서울 서대문구 이화여대길 42 2층](https://pcmap.place.naver.com/restaurant/1041833042/home?from=map&fromPanelNum=1&additionalHeight=76&timestamp=202504121608&locale=ko&svcName=map_pcv5&searchText=%EA%BE%B8%EC%95%84%20%EC%9D%B4%EB%8C%80%EC%A0%90#)
