--- a/src/site/notes/xhs/韩国/首尔/弘大 신이도가 申李道家.md
+++ b/src/site/notes/xhs/韩国/首尔/弘大 신이도가 申李道家.md
@@ -18,4 +18,4 @@
 地址：
 [서울 마포구 잔다리로 20-12](https://pcmap.place.naver.com/restaurant/1789177874/home?from=map&fromPanelNum=1&additionalHeight=76&timestamp=202504121638&locale=ko&svcName=map_pcv5&searchText=%EC%8B%A0%EC%9D%B4%EB%8F%84%EA%B0%80#)
 
-![Pasted image 20250412163918.png](/img/user/xhs/%E9%9F%A9%E5%9B%BD/%E9%A6%96%E5%B0%94/attachments/Pasted%20image%2020250412163918.png)
+![Pasted image 20250412163918.png](/img/user/xhs/%E9%9F%A9%E5%9B%BD/%E9%A6%96%E5%B0%94/photo-%E9%A6%96%E5%B0%94/Pasted%20image%2020250412163918.png)
