--- a/src/site/notes/xhs/韩国/首尔/梨大 라이프커피 이대점.md
+++ b/src/site/notes/xhs/韩国/首尔/梨大 라이프커피 이대점.md
@@ -13,4 +13,4 @@
 地址：
 [서울 서대문구 이화여대7길 14](https://pcmap.place.naver.com/restaurant/1091975769/home?entry=bmp&from=map&fromPanelNum=2&timestamp=202504121623&locale=ko&svcName=map_pcv5&searchText=%EB%9D%BC%EC%9D%B4%ED%94%84%EC%BB%A4%ED%94%BC%20%EC%9D%B4%EB%8C%80%EC%A0%90#)
 
-![Pasted image 20250412162350.png](/img/user/xhs/%E9%9F%A9%E5%9B%BD/%E9%A6%96%E5%B0%94/attachments/Pasted%20image%2020250412162350.png)
+![Pasted image 20250412162350.png](/img/user/xhs/%E9%9F%A9%E5%9B%BD/%E9%A6%96%E5%B0%94/photo-%E9%A6%96%E5%B0%94/Pasted%20image%2020250412162350.png)
